tests/errors/runtime.RangeWIthZeroStep.res
5..0
1..5 (2)
1..5
>> Runtime | File: runtime.RangeWIthZeroStep.art
     error | Line: 5
           | 
           | step attribute can't be 0
